--- a/app/pages/blogs/detail-blog/detail-blog.html
+++ b/app/pages/blogs/detail-blog/detail-blog.html
@@ -21,32 +21,23 @@
 
                 <div class="blog">
 
-                    <h2>Hello World</h2>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Launch demo modal
-                    </button>
+                    <section class="blog-news">
+                        <div class="blog-news-content">
+                            <p>Nove 06, 2022 | 14 min read</p>
+                            <h1>Most popular vegetarian and vegan restaurants in your city.</h1>
+                            <p>Looking to add more leafy greens and plant-based burgers to your plate this fall? Today,
+                                in celebration of World Vegetarian Day on October 1, we discover few restaurants for
+                                you.</p>
 
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                </div>
-                            </div>
+                            <img src="" alt="blog-avatar" />
+                            <h3>David Warner</h3>
                         </div>
-                    </div>
+
+                        <div class="blog-new-image">
+                            <img src="" alt="Image-iill">
+                        </div>
+                    </section>
+
                 </div>
 
             </section>
