--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -5,54 +5,323 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../../common/header/header.css">
-    <link rel="stylesheet" href="../../common/footer/footer.css">
     <link rel="stylesheet" href="./home.css">
-
+    <link rel="stylesheet" href="../../common/footer/footer.css">
+    <link rel="stylesheet" href="../../common/header/header.css">
 </head>
 
 <body>
+    <div class="header">
+        <header class="grid wide">
+            <nav class="header-nav">
+                <div>
+                    <h1>FOODEATS</h1>
+                </div>
 
-    <header id="header" class="home-header"> </header>
+                <div class="nav-menu list-appre">
 
-    <section class="home-container">
+                    <ul>
+                        <li>About</li>
+                        <li><a href="../../pages/restaurants/restaurants.html">Restaurants</a> </li>
+                        <li>Blog</li>
+                        <li>Contact</li>
+                        <li>FAQ</li>
+                    </ul>
 
-        <div class="grid wide container-slide">
+                </div>
 
-            <div class="texts">
+                <div class="nav-author">
 
-                <h2>#The Best in Town</h2>
+                    <button class="btn-signin">Sign In</button>
 
-                <h1>
-                    Get food <img src="../../images/logoHeader1.png" alt="image-title"> delivery and more <img
-                        src="../../images/logoHeader2.png" alt="image-title">
-                </h1>
-                <p>You want it. We get it. Food, drinks, groceries, and more available for delivery and pickup.</p>
-                <div class="location">
-                    <button>Explore </button>
-                    <div class="location-input">
-                        <input placeholder="Enter location..." type="text" />
-                        <i class="fa-solid fa-location-dot"></i>
+                    <button class="button-primary">Sign Up</button>
+
+                    <i class="fa-solid fa-list active modal_menu"></i>
+
+                    <div class="list_menu active_menu ">
+                        <a href="#"> About </a>
+                        <a href="#"> Restaurants </a>
+                        <a href="#"> Blog </a>
+                        <a href="#"> Contact </a>
+                        <a href="#"> FAQ </a>
+                    </div>
+                </div>
+            </nav>
+        </header>
+    </div>
+    <div class="home-container">
+
+        <div class="grid wide">
+
+            <div class="container-slide">
+                <div class="texts">
+
+                    <h2>#The Best in Town</h2>
+
+                    <h1>
+                        Get food <img src="../../images/logoHeader1.png" alt="image-title"> delivery and more <img
+                            src="../../images/logoHeader2.png" alt="image-title">
+                    </h1>
+                    <p>You want it. We get it. Food, drinks, groceries, and more available for delivery and pickup.</p>
+                    <div class="location">
+                        <button>Explore </button>
+                        <div class="location-input">
+                            <input placeholder="Enter location..." type="text" />
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                    </div>
+
+                    <button>Order Now</button>
+                </div>
+
+                <div class="image">
+                    <div class="rectnagle2"> </div>
+                    <h1 class="image-title1">FOOD</h1>
+                    <h1 class="image-title2">DELIVERY</h1>
+                    <img src="../../images/deli.png" alt="" />
+                    <svg class="image-star" xmlns="http://www.w3.org/2000/svg" width="359" height="278"
+                        viewBox="0 0 359 278" fill="none">
+                        <path
+                            d="M94.714 166.872C99.5382 166.872 102.662 170.332 100.474 173.252L43.6691 249.083C40.266 253.626 49.0798 257.796 54.1747 254.054L131.905 196.959C135.768 194.122 142.754 195.814 143.101 199.671L149.698 272.911C150.165 278.089 161.145 278.531 162.508 273.426L181.329 202.949C182.285 199.37 188.866 198.088 192.469 200.778L271.478 259.771C276.746 263.705 285.849 259.079 281.78 254.537L224.721 190.829C222.095 187.898 225.214 184.146 230.265 184.158L350.458 184.445C357.93 184.463 359.48 177.288 352.315 175.847L242.004 153.666C236.65 152.589 235.691 147.718 240.44 145.724L355.9 97.2254C362.285 94.5437 357.939 87.8691 350.722 89.2722L226.49 113.425C222.474 114.206 218.44 112.234 218.254 109.4L211.412 4.71745C211.074 -0.456147 200.134 -1.03449 198.621 4.04126L170.305 99.0544C169.18 102.829 161.954 103.86 158.687 100.713L88.2064 32.8024C83.7374 28.4964 73.9321 32.2127 76.9812 37.0568L126.211 115.268C128.54 118.969 122.918 122.671 117.543 120.974L18.8749 89.8212C11.8687 87.6091 6.08697 94.0997 12.2236 97.288L82.7919 133.952C86.9348 136.104 85.8102 140.531 80.8449 141.616L4.48908 158.304C-2.52704 159.838 -0.901605 166.872 6.46882 166.872H94.714Z"
+                            fill="#FFB700" />
+                    </svg>
+                </div>
+            </div>
+
+            <section class="services">
+
+                <h1>Your everyday, right away</h1>
+
+                <p>Order food and grocery delivery online from hundreds of <br> restaurants and shops nearby.</p>
+
+
+                <div class="service">
+                    <div class="card">
+                        <div>
+                            <img src="../../images/services1.png" alt="">
+                        </div>
+                        <h3>Food Items</h3>
+                        <p>Find deals, free delivery, and more from our restaurant partners.</p>
+                        <button>Explore</button>
+                    </div>
+
+                    <div class="card">
+                        <div>
+                            <img src="../../images/services1.png" alt="">
+                        </div>
+                        <h3>Food Items</h3>
+                        <p>Find deals, free delivery, and more from our restaurant partners.</p>
+                        <button>Explore</button>
+                    </div>
+
+                    <div class="card">
+                        <div>
+                            <img src="../../images/services1.png" alt="">
+                        </div>
+                        <h3>Food Items</h3>
+                        <p>Find deals, free delivery, and more from our restaurant partners.</p>
+                        <button>Explore</button>
                     </div>
                 </div>
 
-                <button>Order Now</button>
+            </section>
+
+            <section class="about">
+
+                <div class="count-down">
+                    <div class="countd-down_number">
+                        <h1>350+</h1>
+                        <p>Order per minute</p>
+                    </div>
+
+                    <div class="countd-down_number">
+                        <h1>10x</h1>
+                        <p>Faster delivery</p>
+                    </div>
+
+                    <div class="countd-down_number">
+                        <h1>10+</h1>
+                        <p>In Country</p>
+                    </div>
+
+                    <div class="countd-down_number">
+                        <h1>99.9%</h1>
+                        <p>Order accuracy</p>
+                    </div>
+
+                    <img class="count_down_food" src="../../images/logoHeader1.png" alt="">
+                    <img class="count_down_plate" src="../../images/about_plate.png" alt="">
+                </div>
+
+                <div class="about-foodeats">
+                    <div class="ill">
+                        <img class="rectangle1-1" src="../../images/plate_about.png" alt="">
+                        <img class="rectangle1-2" src="../../images/leti.png" alt="">
+                        <img class="rectangle1-3" src="../../images/about_plate.png" alt="">
+                        <h1 class="title1">FOOD</h1>
+                        <h1 class="title2">EATS</h1>
+                    </div>
+
+                    <div class="content">
+                        <h1>About Foodeats</h1>
+                        <p>Foodeats helps you find and order food from wherever you are. How it works: you type in an
+                            address,
+                            we tell you the restaurants that deliver to that locale as well as showing you droves of
+                            pickup
+                            restaurants near you.</p>
+                        <p> Want to be more specific? Search by cuisine, restaurant name or menu item.
+                            We'll filter your results accordingly.</p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="features">
+
+                <h1>It’s all here. All in one <br> platform.
+                </h1>
+
+                <p>Order food and grocery delivery online from hundreds of <br> restaurants and shops nearby.</p>
+
+                <div class="features-base">
+
+                    <div class="card-features">
+                        <img src="../../images/delipng.png" alt="">
+                        <h1>Deliver With Us</h1>
+                        <p>Sign up today, start earning tomorrow. Build a new career <br> in delivery service with us.
+                        </p>
+                        <button>Learn More</button>
+                    </div>
+
+                    <div class="card-features">
+                        <img src="../../images/partner.png" alt="">
+
+                        <h1>Partner With Us</h1>
+                        <p>Sign up today, start earning tomorrow. Build a new career <br> in delivery service with us.
+                        </p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="testimotions">
+
+                <h1>What food lovers are <br> saying about us </h1>
+
+                <div class="testimotions-base">
+                    <div class="card-testimation">
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p>I’m obsessed with excellent customer service...thanks foodeats for being awesome!</p>
+
+                        <h1>Peter Moor</h1>
+                        <span>UI/UX Designer</span>
+                    </div>
+                    <div class="card-testimation">
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p>I’m obsessed with excellent customer service...thanks foodeats for being awesome!</p>
+
+                        <h1>Peter Moor</h1>
+                        <span>UI/UX Designer</span>
+                    </div>
+                    <div class="card-testimation">
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p>I’m obsessed with excellent customer service...thanks foodeats for being awesome!</p>
+
+                        <h1>Peter Moor</h1>
+                        <span>UI/UX Designer</span>
+                    </div>
+            </section>
+        </div>
+        </section>
+    </div>
+
+    </div>
+
+    <!-- <script src="./header.js"></script> -->
+
+    <script>
+        const modalMenu = document.querySelector('.modal_menu');
+        const listMenu = document.querySelector('.list_menu');
+        const container = document.querySelector('.container')
+        const footer = document.querySelector('.footer');
+
+        modalMenu.addEventListener('click', (e) => {
+            listMenu.classList.toggle('active_menu');
+            e.stopPropagation();
+        })
+
+        document.addEventListener('click', (e) => {
+            const clickElement = e.target;
+
+            if (!listMenu.contains(clickElement)) {
+                listMenu.classList.add('active_menu');
+            }
+        })
+    </script>
+
+    <!-- <section class="home-container">
+
+        <div class="grid wide">
+
+            <div class="container-slide">
+                <div class="texts">
+
+                    <h2>#The Best in Town</h2>
+
+                    <h1>
+                        Get food <img src="../../images/logoHeader1.png" alt="image-title"> delivery and more <img
+                            src="../../images/logoHeader2.png" alt="image-title">
+                    </h1>
+                    <p>You want it. We get it. Food, drinks, groceries, and more available for delivery and pickup.</p>
+                    <div class="location">
+                        <button>Explore </button>
+                        <div class="location-input">
+                            <input placeholder="Enter location..." type="text" />
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                    </div>
+
+                    <button>Order Now</button>
+                </div>
+
+                <div class="image">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="80%" height="80%" viewBox="0 0 359 358"
+                        fill="#ffb7009c">
+                        <path
+                            d="M264.286 214.949C259.462 214.949 256.338 219.419 258.526 223.193L315.331 321.177C318.734 327.047 309.92 332.436 304.825 327.6L227.095 253.826C223.232 250.159 216.246 252.346 215.899 257.33L209.302 351.966C208.835 358.657 197.855 359.228 196.492 352.632L177.671 261.565C176.715 256.941 170.134 255.284 166.531 258.761L87.5223 334.988C82.2543 340.071 73.1509 334.094 77.2196 328.224L134.279 245.905C136.905 242.117 133.786 237.27 128.735 237.285L8.54218 237.656C1.07047 237.679 -0.479645 228.407 6.68466 226.546L116.996 197.884C122.35 196.493 123.309 190.199 118.56 187.622L3.09976 124.955C-3.28461 121.49 1.06104 112.866 8.27786 114.679L132.51 145.888C136.526 146.897 140.56 144.348 140.746 140.687L147.588 5.42179C147.926 -1.26324 158.866 -2.01054 160.379 4.54806L188.695 127.319C189.82 132.196 197.046 133.528 200.313 129.461L270.794 41.7116C275.263 36.1476 285.068 40.9496 282.019 47.2089L232.789 148.269C230.46 153.051 236.082 157.834 241.457 155.642L340.125 115.388C347.131 112.53 352.913 120.916 346.776 125.036L276.208 172.411C272.065 175.192 273.19 180.913 278.155 182.315L354.511 203.878C361.527 205.859 359.902 214.949 352.531 214.949H264.286Z"
+                            fill="#FFB700" />
+                    </svg>
+                    <img src="../../images/delivery.gif" alt="thumb-title">
+
+                </div>
             </div>
 
-            <div class="image">
-                <svg xmlns="http://www.w3.org/2000/svg" width="80%" height="80%" viewBox="0 0 359 358" fill="#ffb7009c">
-                    <path
-                        d="M264.286 214.949C259.462 214.949 256.338 219.419 258.526 223.193L315.331 321.177C318.734 327.047 309.92 332.436 304.825 327.6L227.095 253.826C223.232 250.159 216.246 252.346 215.899 257.33L209.302 351.966C208.835 358.657 197.855 359.228 196.492 352.632L177.671 261.565C176.715 256.941 170.134 255.284 166.531 258.761L87.5223 334.988C82.2543 340.071 73.1509 334.094 77.2196 328.224L134.279 245.905C136.905 242.117 133.786 237.27 128.735 237.285L8.54218 237.656C1.07047 237.679 -0.479645 228.407 6.68466 226.546L116.996 197.884C122.35 196.493 123.309 190.199 118.56 187.622L3.09976 124.955C-3.28461 121.49 1.06104 112.866 8.27786 114.679L132.51 145.888C136.526 146.897 140.56 144.348 140.746 140.687L147.588 5.42179C147.926 -1.26324 158.866 -2.01054 160.379 4.54806L188.695 127.319C189.82 132.196 197.046 133.528 200.313 129.461L270.794 41.7116C275.263 36.1476 285.068 40.9496 282.019 47.2089L232.789 148.269C230.46 153.051 236.082 157.834 241.457 155.642L340.125 115.388C347.131 112.53 352.913 120.916 346.776 125.036L276.208 172.411C272.065 175.192 273.19 180.913 278.155 182.315L354.511 203.878C361.527 205.859 359.902 214.949 352.531 214.949H264.286Z"
-                        fill="#FFB700" />
-                </svg>
-                <img src="../../images/delivery.gif" alt="thumb-title">
-
-            </div>
 
         </div>
-
-
     </section>
+
+
     <section class="services">
 
         <h1>Your everyday, right away</h1>
@@ -83,6 +352,7 @@
             </div>
         </div>
     </section>
+
 
     <section class="about">
 
@@ -218,15 +488,19 @@
                 <span>UI/UX Designer</span>
             </div>
         </div>
-    </section>
+    </section> -->
+
 
 
 
     <footer id="footer" class="home-footer">
 
+
     </footer>
 
     <script src="./home.js" type="module"> </script>
+
+    <script src="../../common/header/header.js"></script>
 </body>
 
 </html>
