--- a/app/pages/auth/login/login.html
+++ b/app/pages/auth/login/login.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
     <title>Login Page</title>
 </head>
+
 <body>
 
-<div class="login-container">
-    <h2>Login</h2>
-    <button class="facebook"><img style="width: 20px;height: 20px;"  src="https://hutechedu.web.app/assets/facebook-512.png" > Login with Facebook</button>
-    <button class="google">  <img  style="width: 20px;height: 20px;"
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2008px-Google_%22G%22_Logo.svg.png"> Login with Google</button>
-    <button class="apple">  <img style="width: 20px;height: 20px;"
-        src="https://media.loveitopcdn.com/3807/logo-apple-1.png"> Login with Apple</button>
-    <div class="separator" style="text-align: center;">or</div>
-    <form class="email-login">
-        <input type="email" placeholder="Email">
-        <input  type="password" placeholder="Password">
-        <div class="forgot-password"><a href="#">Forgot Password?</a></div>
-        <button type="submit">Login</button>
-    </form>
-    <div class="signup">
-        Don't have an account? <a href="#">Sign up</a>
-    </div>
-</div>
+    <div class="grid wide">
 
+        <div class="login-container">
+            <h2>Login</h2>
+            <button class="facebook"><img style="width: 20px;height: 20px;"
+                    src="https://hutechedu.web.app/assets/facebook-512.png"> Login with Facebook</button>
+            <button class="google"> <img style="width: 20px;height: 20px;"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2008px-Google_%22G%22_Logo.svg.png">
+                Login with Google</button>
+            <button class="apple"> <img style="width: 20px;height: 20px;"
+                    src="https://media.loveitopcdn.com/3807/logo-apple-1.png"> Login with Apple</button>
+            <div class="separator" style="text-align: center;">or</div>
+            <form class="email-login">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+                <div class="forgot-password"><a href="#">Forgot Password?</a></div>
+                <button type="submit">Login</button>
+            </form>
+            <div class="signup">
+                Don't have an account? <a href="#">Sign up</a>
+            </div>
+        </div>
+
+    </div>
 
 </body>
+
 </html>
