--- a/app/pages/blogs/detail-blog/detail-blog.html
+++ b/app/pages/blogs/detail-blog/detail-blog.html
@@ -4,48 +4,213 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Detail</title>
+    <title>Detail blog</title>
+    <link rel="stylesheet" href="./detail-blog.css">
     <link rel="stylesheet" href="../../../common/header/header.css">
     <link rel="stylesheet" href="../../../common/footer/footer.css">
-    <link rel="stylesheet" href="./detail-blog.css">
-
+    <link rel="stylesheet" href="../blogs.css">
 </head>
 
 <body>
+    <div class="header">
+        <header class="grid wide">
+            <nav class="header-nav">
+                <div>
+                    <h1>FOODEATS</h1>
+                </div>
 
-    <header id="header"></header>
+                <div class="nav-menu list-appre">
 
-    <div class="detail-blog-container">
-        <section class="containe-post grid wide">
-            <section class="row">
-
-                <div class="blog">
-
-                    <section class="blog-news">
-                        <div class="blog-news-content">
-                            <p>Nove 06, 2022 | 14 min read</p>
-                            <h1>Most popular vegetarian and vegan restaurants in your city.</h1>
-                            <p>Looking to add more leafy greens and plant-based burgers to your plate this fall? Today,
-                                in celebration of World Vegetarian Day on October 1, we discover few restaurants for
-                                you.</p>
-
-                            <img src="" alt="blog-avatar" />
-                            <h3>David Warner</h3>
-                        </div>
-
-                        <div class="blog-new-image">
-                            <img src="" alt="Image-iill">
-                        </div>
-                    </section>
+                    <ul>
+                        <li>About</li>
+                        <li><a href="../../pages/restaurants/restaurants.html">Restaurants</a> </li>
+                        <li>Contact</li>
+                        <li>Blog</li>
+                        <li>FAQ</li>
+                    </ul>
 
                 </div>
 
+                <div class="nav-author">
+
+                    <button class="btn-signin">Sign In</button>
+
+                    <button class="button-primary">Sign Up</button>
+
+                    <i class="fa-solid fa-list active modal_menu"></i>
+
+                    <div class="list_menu active_menu ">
+                        <a href="#"> About </a>
+                        <a href="#"> Restaurants </a>
+                        <a href="#"> Blog </a>
+                        <a href="#"> Contact </a>
+                        <a href="#"> FAQ </a>
+                    </div>
+                </div>
+            </nav>
+        </header>
+    </div>
+
+    <div class="grid wide">
+        <div class="detail-blog-container">
+            <section class="blog">
+
+                <div class="blog-content">
+                    <p>Nove 06, 2022 | 14 min read</p>
+                    <h1>Most popular vegetarian and vegan restaurants in your city.</h1>
+                    <P class="content__word">Looking to add more leafy greens and plant-based burgers to your plate this
+                        fall?
+                        Today, in celebration of World Vegetarian Day on October 1, we discover few restaurants for you.
+                    </P>
+                    <div class="avatar">
+                        <img src="../../../images/avatar.jpg">
+                        <p>David Warner</p>
+                    </div>
+
+                </div>
+
+                <div class="blog-ill">
+                    <img src="../../../images/plateBlog.png" alt="">
+                </div>
+
+
             </section>
-        </section>
+
+            <div class="blog-social">
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+
+            <section class="content">
+
+                <div>
+                    <p>Are you packing a school lunch for a picky eater? Getting your child to eat healthfully is a
+                        struggle
+                        for many parents. In this slideshow, Johns Hopkins pediatric dietitian Meredith Thivierge offers
+                        school lunch tips for picky eaters to help you prepare meals with the vitamins, minerals and
+                        nutrients your child needs to grow and succeed in school.</p>
+                </div>
+                <img src="../../../images/blog_content-1.png" alt="">
+                <div>
+                    <h1>The Royal Dine</h1>
+                    <p>Children, especially younger children, can be influenced by how the food looks. Fun shapes and
+                        bright
+                        colors may grab their attention and encourage them to take a bite. You don’t have to spend a lot
+                        of
+                        time carving cartoon characters out of bologna. Just take a few minutes to arrange the lunch
+                        neatly,
+                        add a personal note or use a cookie cutter to shape a sandwich or slice of cheese to add visual
+                        interest to the meal. “If the food looks fun and appetizing to you, there is a good chance your
+                        picky eater will also find it appetizing,” Thivierge says.</p>
+                </div>
+                <img src="../../../images/blog_content-1.png" alt="">
+                <div>
+                    <h1>The Dish Express</h1>
+                    <p>You may have to get creative to make sure your picky eater’s lunch covers the five major food
+                        groups:
+                        fruits, vegetables, protein, grains and dairy. If your child is allergic to or intolerant of
+                        specific foods, it may be worth talking to your pediatrician about a multivitamin or supplement.
+                        If
+                        dietary restrictions are not an issue, you can try sneaking in foods your picky eater refuses to
+                        eat. “Blending cauliflower with mashed potatoes or adding spinach to a fruit smoothie are a few
+                        ways
+                        parents can trick their children into eating healthy foods,” Thivierge suggests. She also
+                        advises
+                        asking your child why they dislike certain foods. If they simply don’t like the texture or look,
+                        this can sometimes be remedied by trying different cooking techniques.</p>
+                </div>
+                <img src="../../../images/blog_content-1.png" alt="">
+                <div>
+                    <h1>The Nawab Kitchen</h1>
+                    <p>CPicky eaters, and children in general, are more likely to eat something if they helped to make
+                        it.
+                        Participation gives kids a sense of ownership in the final product and helps them see exactly
+                        what’s
+                        inside that sandwich or salad they are having for lunch. You can involve your children at every
+                        stage of the process, from picking a recipe to food shopping and meal preparation. “Together you
+                        could create a list of foods your children enjoy and that you approve of and then have them
+                        choose
+                        from this list,” recommends Thivierge. This allows parents to remain in control while giving a
+                        child
+                        the freedom of choice.</p>
+                </div>
+            </section>
+
+            <section class="blog-post">
+                <h1 class="blog-post-title">Read similar blog</h1>
+
+                <section class="blogs">
+
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                        <div class="col">
+                            <div class="card h-100 ">
+                                <img src="../../../images/blog_image1.png" class="card-img-top" alt="...">
+                                <div class="card-body card-blog">
+                                    <p>Nove 06, 2022 | 14 min read</p>
+                                    <h5 class="card-title">Top 10 vegetarian and vegan restaurants in your city.</h5>
+                                    <p class="card-text">Looking to add more leafy greens and plant-based burgers to
+                                        your
+                                        plate this fall?
+                                        Today, in celebration
+                                        of World...</p>
+                                </div>
+                                <div class="card-footer card-blog-footer">
+                                    <small class="text-muted">
+                                        <img src="../../../images/avatar.jpg" alt=""> <span>David Warner</span>
+                                    </small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card h-100 ">
+                                <img src="../../../images/blog_image1.png" class="card-img-top" alt="...">
+                                <div class="card-body card-blog">
+                                    <p>Nove 06, 2022 | 14 min read</p>
+                                    <h5 class="card-title">Top 10 vegetarian and vegan restaurants in your city.</h5>
+                                    <p class="card-text">Looking to add more leafy greens and plant-based burgers to
+                                        your
+                                        plate this fall?
+                                        Today, in celebration
+                                        of World...</p>
+                                </div>
+                                <div class="card-footer card-blog-footer">
+                                    <small class="text-muted">
+                                        <img src="../../../images/avatar.jpg" alt=""> <span>David Warner</span>
+                                    </small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card h-100 ">
+                                <img src="../../../images/blog_image1.png" class="card-img-top" alt="...">
+                                <div class="card-body card-blog">
+                                    <p>Nove 06, 2022 | 14 min read</p>
+                                    <h5 class="card-title">Top 10 vegetarian and vegan restaurants in your city.</h5>
+                                    <p class="card-text">Looking to add more leafy greens and plant-based burgers to
+                                        your
+                                        plate this fall?
+                                        Today, in celebration
+                                        of World...</p>
+                                </div>
+                                <div class="card-footer card-blog-footer">
+                                    <small class="text-muted">
+                                        <img src="../../../images/avatar.jpg" alt=""> <span>David Warner</span>
+                                    </small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+        </div>
     </div>
 
     <footer id="footer"></footer>
-    <script src="./detail-blog.js" type="module"> </script>
+
+    <script src="../../../common/header/header.js" type="module"></script>
+    <script src="./detail-blog.js"></script>
 </body>
 
 </html>
