--- a/app/pages/restaurants/restaurants.html
+++ b/app/pages/restaurants/restaurants.html
@@ -473,6 +473,21 @@
                             <p>Popular</p>
                             <img src="../../assets/img/arrow_bottom.png" alt="">
                         </div>
+                        <div class="modal_js hiden">
+                            <div class="sort__option hide-on-pc">
+                                <p>Popular</p>
+                                <img src="../../assets/img/arrow_bottom.png" alt="">
+                            </div>
+                            <div class="sort__option">
+                                <p>Popular</p>
+                            </div>
+                            <div class="sort__option">
+                                <p>Recommended</p>
+                            </div>
+                            <div class="sort__option">
+                                <p>Distance</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1054,23 +1069,7 @@
             </div>
         </div>
     </div>
-    <div class="wrapper-modal hiden">
-        <div class="modal">
-            <div class="sort__option hide-on-pc">
-                <p>Popular</p>
-                <img src="../../assets/img/arrow_bottom.png" alt="">
-            </div>
-            <div class="sort__option">
-                <p>Popular</p>
-            </div>
-            <div class="sort__option">
-                <p>Recommended</p>
-            </div>
-            <div class="sort__option">
-                <p>Distance</p>
-            </div>
-        </div>
-    </div>
+    
     <div class="left--mobile hide-on-pc">
         <div class="search-result__filter js_container">
             <div class="control">
@@ -1411,6 +1410,24 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="wrapper__modal--mobile hiden">
+        <div class="modal_js--mobile">
+            <div class="sort__option hide-on-pc">
+                <p>Popular</p>
+                <img src="../../assets/img/arrow_bottom.png" alt="">
+            </div>
+            <div class="sort__option">
+                <p>Popular</p>
+            </div>
+            <div class="sort__option">
+                <p>Recommended</p>
+            </div>
+            <div class="sort__option">
+                <p>Distance</p>
             </div>
         </div>
     </div>
