push code reponsive restaurant, html header have navigation

--- a/app/common/header/header.html
+++ b/app/common/header/header.html
@@ -21,11 +21,11 @@
                 <div class="nav-menu list-appre">
 
                     <ul>
-                        <li>About</li>
+                        <li> <a href="../../pages/about/about.html">About</a></li>
                         <li><a href="../../pages/restaurants/restaurants.html">Restaurants</a> </li>
-                        <li>Blog</li>
-                        <li>Contact</li>
-                        <li>FAQ</li>
+                        <li><a href="../../pages/blogs/blogs.html">Blog</a></li>
+                        <li><a href="../../pages/contact/contact.html">Contact</a></li>
+                        <li><a href="../../pages/faq/faq.html">FAQ</a></li>
                     </ul>
 
                 </div>
