--- a/app/pages/blogs/detail-blog/detail-blog.html
+++ b/app/pages/blogs/detail-blog/detail-blog.html
@@ -22,11 +22,11 @@
                 <div class="nav-menu list-appre">
 
                     <ul>
-                        <li>About</li>
+                        <li> <a href="../../pages/about/about.html">About</a></li>
                         <li><a href="../../pages/restaurants/restaurants.html">Restaurants</a> </li>
-                        <li>Contact</li>
-                        <li>Blog</li>
-                        <li>FAQ</li>
+                        <li><a href="../../pages/blogs/blogs.html">Blog</a></li>
+                        <li><a href="../../pages/contact/contact.html">Contact</a></li>
+                        <li><a href="../../pages/faq/faq.html">FAQ</a></li>
                     </ul>
 
                 </div>
