link site together

--- a/app/pages/restaurants/restaurants.html
+++ b/app/pages/restaurants/restaurants.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../common/footer/footer.css">
 
     <link rel="stylesheet" href="./restaurantResponsive.css">
-    <title>Document</title>
+    <title>Search Result</title>
 </head>
 
 <body>
@@ -593,7 +593,7 @@
                     <div class="container__products">
                         <div class="row sm-gutter mt-45">
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Burger\ Cafe.png');">
                                     </div>
@@ -626,7 +626,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Pizza\ Hut.png');">
                                     </div>
@@ -659,7 +659,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/Caprese\ Sandwich\ Hub.png');">
                                     </div>
@@ -692,7 +692,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Wings\ Cafe.png');">
                                     </div>
@@ -725,7 +725,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Coffee\ Express.png');">
                                     </div>
@@ -758,7 +758,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Biryani\ House.png');">
                                     </div>
@@ -791,7 +791,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/Fast\ Food\ Hub.png');">
                                     </div>
@@ -824,7 +824,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/Fast\ Food\ Cafe.png');">
                                     </div>
@@ -857,7 +857,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/Fried\ Chicken\ Hub.png');">
                                     </div>
@@ -890,7 +890,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Steak\ Cafe.png');">
                                     </div>
@@ -923,7 +923,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Pizza\ King.png');">
                                     </div>
@@ -956,7 +956,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ French\ Fries.png');">
                                     </div>
@@ -989,7 +989,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Noodles\ Cafe.png');">
                                     </div>
@@ -1022,7 +1022,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Egg\ Chicken\ Rice.png');">
                                     </div>
@@ -1055,7 +1055,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ French\ King.png');">
                                     </div>
@@ -1088,7 +1088,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Pasta\ Cafe.png');">
                                     </div>
@@ -1121,7 +1121,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Rice\ House.png');">
                                     </div>
@@ -1154,7 +1154,7 @@
                                 </a>
                             </div>
                             <div class="c-6 l-4 mb-12">
-                                <a class="card" href="#">
+                                <a class="card" href="./detailRestaurants/detail-res.html">
                                     <div class="product-img"
                                         style="background-image: url('../../assets/img/The\ Noodle\ Cafe.png');">
                                     </div>
