update code home, link sites

--- a/app/pages/blogs/blogs.html
+++ b/app/pages/blogs/blogs.html
@@ -17,13 +17,13 @@
         <header class="grid wide">
             <nav class="header-nav">
                 <div>
-                    <h1>FOODEATS</h1>
+                    <h1><a href="../home/home.html">FOODEATS</a></h1>
                 </div>
 
                 <div class="nav-menu list-appre">
 
                     <ul>
-                        <li> <a href="../../pages/about/about.html">About</a></li>
+                        <li><a href="../../pages/about/about.html">About</a></li>
                         <li><a href="../../pages/restaurants/restaurants.html">Restaurants</a> </li>
                         <li><a href="../../pages/blogs/blogs.html">Blog</a></li>
                         <li><a href="../../pages/contact/contact.html">Contact</a></li>
@@ -41,11 +41,11 @@
                     <i class="fa-solid fa-list active modal_menu"></i>
 
                     <div class="list_menu active_menu ">
-                        <a href="#"> About </a>
-                        <a href="#"> Restaurants </a>
-                        <a href="#"> Blog </a>
-                        <a href="#"> Contact </a>
-                        <a href="#"> FAQ </a>
+                        <a href="../../pages/about/about.html"> About </a>
+                        <a href="../../pages/restaurants/restaurants.html"> Restaurants </a>
+                        <a href="../../pages/blogs/blogs.html"> Blog </a>
+                        <a href="../../pages/contact/contact.html"> Contact </a>
+                        <a href="../../pages/faq/faq.html"> FAQ </a>
                     </div>
                 </div>
             </nav>
