--- a/app/common/header/header.html
+++ b/app/common/header/header.html
@@ -32,7 +32,7 @@
 
                 <div class="nav-author">
 
-                    <!-- <button class="btn-signin">Sign In</button> -->
+                    <button class="btn-signin">Sign In</button>
                     <button class="btn__buy">
                         <img src="../../assets/img/Buy.png" alt="">
                     </button>
@@ -54,11 +54,13 @@
                 <div class="header__cart-wrap">
                     <div class="header__cart-list appear">
                         <div class="btn__close">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                <path d="M17 17L1 1M17 1L1 17" stroke="#191720" stroke-width="2" stroke-linecap="round" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
+                                fill="none">
+                                <path d="M17 17L1 1M17 1L1 17" stroke="#191720" stroke-width="2"
+                                    stroke-linecap="round" />
                             </svg>
                         </div>
-        
+
                         <h4 class="header__cart-heading">
                             The Burger Cafe
                         </h4>
@@ -75,8 +77,8 @@
                                             2
                                         </p>
                                         <p class="header__cart-item-quantity-increase">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"
-                                                fill="none">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
+                                                viewBox="0 0 12 12" fill="none">
                                                 <rect y="5.5" width="12" height="1" rx="0.5" fill="#575363" />
                                                 <rect x="5.5" y="12" width="12" height="1" rx="0.5"
                                                     transform="rotate(-90 5.5 12)" fill="#575363" />
@@ -95,10 +97,12 @@
                                     </div>
                                 </div>
                             </li>
-        
+
                         </ul>
                         <div class="header__cart-footer">
-                            <div class="header__cart-view-cart">Go to Check Out $<p class="header__cart-view-cart-total">30.00</p></div>
+                            <div class="header__cart-view-cart">Go to Check Out $<p
+                                    class="header__cart-view-cart-total">30.00</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -107,28 +111,7 @@
     </div>
     <div class="container"></div>
 
-    <!-- <script src="./header.js"></script> -->
-
-    <script>
-        const modalMenu = document.querySelector('.modal_menu');
-        const listMenu = document.querySelector('.list_menu');
-        const container = document.querySelector('.container')
-        const footer = document.querySelector('.footer');
-
-        modalMenu.addEventListener('click', (e) => {
-            listMenu.classList.toggle('active_menu');
-            e.stopPropagation();
-        })
-
-        document.addEventListener('click', (e) => {
-            const clickElement = e.target;
-
-            if (!listMenu.contains(clickElement)) {
-                listMenu.classList.add('active_menu');
-            }
-        })
-    </script>
-
+    <script src="./header.js"></script>
 </body>
 
 </html>
