--- a/app/pages/blogs/detail-blog/detail-blog.html
+++ b/app/pages/blogs/detail-blog/detail-blog.html
@@ -16,7 +16,7 @@
         <header class="grid wide">
             <nav class="header-nav">
                 <div>
-                    <h1>FOODEATS</h1>
+                    <h1><a href="../../home/home.html">FOODEATS</a></h1>
                 </div>
 
                 <div class="nav-menu list-appre">
@@ -40,11 +40,11 @@
                     <i class="fa-solid fa-list active modal_menu"></i>
 
                     <div class="list_menu active_menu ">
-                        <a href="#"> About </a>
-                        <a href="#"> Restaurants </a>
-                        <a href="#"> Blog </a>
-                        <a href="#"> Contact </a>
-                        <a href="#"> FAQ </a>
+                        <a a href="../../pages/about/about.html"> About </a>
+                        <a a href="../../pages/restaurants/restaurants.html"> Restaurants </a>
+                        <a a href="../../pages/blogs/blogs.html"> Blog </a>
+                        <a a href="../../pages/contact/contact.html"> Contact </a>
+                        <a a href="../../pages/faq/faq.html"> FAQ </a>
                     </div>
                 </div>
             </nav>
