--- a/app/pages/restaurants/food/detail-food/detail-food.html
+++ b/app/pages/restaurants/food/detail-food/detail-food.html
@@ -18,17 +18,19 @@
         <header class="grid wide">
             <nav class="header-nav">
                 <div>
-                    <h1>FOODEATS</h1>
+                    <h1><a href="../../../home/home.html">FOODEATS</a></h1>
                 </div>
 
                 <div class="nav-menu list-appre">
 
                     <ul>
-                        <li> <a href="../../pages/about/about.html">About</a></li>
-                        <li><a href="../../pages/restaurants/restaurants.html">Restaurants</a> </li>
-                        <li><a href="../../pages/blogs/blogs.html">Blog</a></li>
-                        <li><a href="../../pages/contact/contact.html">Contact</a></li>
-                        <li><a href="../../pages/faq/faq.html">FAQ</a></li>
+                        <li> <a href="../../../about/about.html">About</a></li>
+                        <li><a href="../../../restaurants/restaurants.html">Restaurants</a>
+                        </li>
+                        <li><a href="../../../blogs/blogs.html">Blog</a></li>
+                        <li><a href="../../../contact/contact.html">Contact</a>
+                        </li>
+                        <li><a href="../../../faq/faq.html">FAQ</a></li>
                     </ul>
 
                 </div>
@@ -45,23 +47,17 @@
                     <i class="fa-solid fa-list active modal_menu"></i>
 
                     <div class="list_menu active_menu ">
-                        <a href="#"> About </a>
-                        <a href="#"> Restaurants </a>
-                        <a href="#"> Blog </a>
-                        <a href="#"> Contact </a>
-                        <a href="#"> FAQ </a>
+                        <a href="../../../about/about.html"> About </a>
+                        <a href="../../../restaurants/restaurants.html"> Restaurants </a>
+                        <a href="../../../blogs/blogs.html"> Blog </a>
+                        <a href="../../../contact/contact.html"> Contact </a>
+                        <a href="../../../faq/faq.html"> FAQ </a>
                     </div>
-                </div>
-            </nav>
-            <div class="header__cart">
-                <div class="header__cart-wrap">
                     <div class="header__cart-list">
-                        <div class="btn__close">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                <path d="M17 17L1 1M17 1L1 17" stroke="#191720" stroke-width="2" stroke-linecap="round" />
-                            </svg>
-                        </div>
-        
+                        <lord-icon class="time-apear" src="https://cdn.lordicon.com/nhfyhmlt.json" trigger="hover"
+                            colors="primary:#121331" style="width:40px;height:40px">
+                        </lord-icon>
+
                         <h4 class="header__cart-heading">
                             The Burger Cafe
                         </h4>
@@ -71,20 +67,15 @@
                                     <img class="header__cart-item-img"
                                         src="https://cf.shopee.vn/file/10ad3c23d56f4a55180ed0ac590c0860_tn" alt="">
                                     <div class="header__cart-item-quantity">
-                                        <p class="header__cart-item-quantity-decrease">
+                                        <span class="header__cart-item-quantity-decrease btn-decrease">
                                             -
-                                        </p>
-                                        <p class="header__cart-item-quantity-counts">
+                                        </span>
+                                        <span class="header__cart-item-quantity-counts">
                                             2
-                                        </p>
-                                        <p class="header__cart-item-quantity-increase">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"
-                                                fill="none">
-                                                <rect y="5.5" width="12" height="1" rx="0.5" fill="#575363" />
-                                                <rect x="5.5" y="12" width="12" height="1" rx="0.5"
-                                                    transform="rotate(-90 5.5 12)" fill="#575363" />
-                                            </svg>
-                                        </p>
+                                        </span>
+                                        <span class="header__cart-item-quantity-increase btn-increase">
+                                            +
+                                        </span>
                                     </div>
                                 </div>
                                 <div class="header__cart-item-info">
@@ -98,14 +89,16 @@
                                     </div>
                                 </div>
                             </li>
-        
+
                         </ul>
                         <div class="header__cart-footer">
-                            <div class="header__cart-view-cart">Go to Check Out $<p class="header__cart-view-cart-total">30.00</p></div>
+                            <div class="header__cart-view-cart">Go to Check Out $<p
+                                    class="header__cart-view-cart-total">30.00</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </nav>
         </header>
     </div>
 
@@ -113,7 +106,8 @@
         <div class="left">
             <a href="#" class="back">
                 <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" viewBox="0 0 6 10" fill="none">
-                    <path d="M5 9L1 5L5 1" stroke="#191720" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M5 9L1 5L5 1" stroke="#191720" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
                 </svg>
                 Back to The Burger Cafe
             </a>
@@ -156,28 +150,11 @@
     </div>
     <footer id="footer"></footer>
 
+    <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
     <script src="../../../../common/header/header.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./detail.food.js" type="module"></script>
-    <script>
-        const modalMenu = document.querySelector('.modal_menu');
-        const listMenu = document.querySelector('.list_menu');
-        const container = document.querySelector('.container')
-        const footer = document.querySelector('.footer');
-
-        modalMenu.addEventListener('click', (e) => {
-            listMenu.classList.toggle('active_menu');
-            e.stopPropagation();
-        })
-
-        document.addEventListener('click', (e) => {
-            const clickElement = e.target;
-
-            if (!listMenu.contains(clickElement)) {
-                listMenu.classList.add('active_menu');
-            }
-        })
-    </script>
+    <script src="../../../../common/header/header.js"></script>
 </body>
 
 </html>
