--- a/app/pages/restaurants/restaurants.html
+++ b/app/pages/restaurants/restaurants.html
@@ -17,7 +17,7 @@
         <header class="grid wide">
             <nav class="header-nav">
                 <div>
-                    <h1>FOODEATS</h1>
+                    <h1><a href="../home/home.html">FOODEATS</a></h1>
                 </div>
 
                 <div class="nav-menu list-appre">
@@ -44,11 +44,11 @@
                     <i class="fa-solid fa-list active modal_menu"></i>
 
                     <div class="list_menu active_menu ">
-                        <a href="#"> About </a>
-                        <a href="#"> Restaurants </a>
-                        <a href="#"> Blog </a>
-                        <a href="#"> Contact </a>
-                        <a href="#"> FAQ </a>
+                        <a href="../../pages/about/about.html"> About </a>
+                        <a href="../../pages/restaurants/restaurants.html"> Restaurants </a>
+                        <a href="../../pages/blogs/blogs.html"> Blog </a>
+                        <a href="../../pages/contact/contact.html"> Contact </a>
+                        <a href="../../pages/faq/faq.html"> FAQ </a>
                     </div>
                 </div>
             </nav>
@@ -56,11 +56,13 @@
                 <div class="header__cart-wrap">
                     <div class="header__cart-list">
                         <div class="btn__close">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                <path d="M17 17L1 1M17 1L1 17" stroke="#191720" stroke-width="2" stroke-linecap="round" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
+                                fill="none">
+                                <path d="M17 17L1 1M17 1L1 17" stroke="#191720" stroke-width="2"
+                                    stroke-linecap="round" />
                             </svg>
                         </div>
-        
+
                         <h4 class="header__cart-heading">
                             The Burger Cafe
                         </h4>
@@ -77,8 +79,8 @@
                                             2
                                         </p>
                                         <p class="header__cart-item-quantity-increase">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"
-                                                fill="none">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
+                                                viewBox="0 0 12 12" fill="none">
                                                 <rect y="5.5" width="12" height="1" rx="0.5" fill="#575363" />
                                                 <rect x="5.5" y="12" width="12" height="1" rx="0.5"
                                                     transform="rotate(-90 5.5 12)" fill="#575363" />
@@ -97,10 +99,12 @@
                                     </div>
                                 </div>
                             </li>
-        
+
                         </ul>
                         <div class="header__cart-footer">
-                            <div class="header__cart-view-cart">Go to Check Out $<p class="header__cart-view-cart-total">30.00</p></div>
+                            <div class="header__cart-view-cart">Go to Check Out $<p
+                                    class="header__cart-view-cart-total">30.00</p>
+                            </div>
                         </div>
                     </div>
                 </div>
