fix link sites regis, login, final

--- a/app/pages/blogs/detail-blog/detail-blog.html
+++ b/app/pages/blogs/detail-blog/detail-blog.html
@@ -16,21 +16,16 @@
         <header class="grid wide">
             <nav class="header-nav">
                 <div>
-
                     <h1><a href="../../home/home.html">FOODEATS</a></h1>
                 </div>
-
                 <div class="nav-menu list-appre">
-
                     <ul>
-
-                        <li> <a href="../../pages/about/about.html">About</a></li>
-                        <li><a href="../../pages/restaurants/restaurants.html">Restaurants</a> </li>
-                        <li><a href="../../pages/blogs/blogs.html">Blog</a></li>
-                        <li><a href="../../pages/contact/contact.html">Contact</a></li>
-                        <li><a href="../../pages/faq/faq.html">FAQ</a></li>
+                        <li> <a href="../../about/about.html">About</a></li>
+                        <li><a href="../../restaurants/restaurants.html">Restaurants</a> </li>
+                        <li><a href="../blogs.html">Blog</a></li>
+                        <li><a href="../../contact/contact.html">Contact</a></li>
+                        <li><a href="../../faq/faq.html">FAQ</a></li>
                     </ul>
-
                 </div>
 
                 <div class="nav-author">
@@ -43,11 +38,11 @@
 
                     <div class="list_menu active_menu ">
 
-                        <a a href="../../pages/about/about.html"> About </a>
-                        <a a href="../../pages/restaurants/restaurants.html"> Restaurants </a>
-                        <a a href="../../pages/blogs/blogs.html"> Blog </a>
-                        <a a href="../../pages/contact/contact.html"> Contact </a>
-                        <a a href="../../pages/faq/faq.html"> FAQ </a>
+                        <a href="../../about/about.html"> About </a>
+                        <a href="../../restaurants/restaurants.html"> Restaurants </a>
+                        <a href="../blogs.html"> Blog </a>
+                        <a href="../../contact/contact.html"> Contact </a>
+                        <a href="../../faq/faq.html"> FAQ </a>
                     </div>
                 </div>
             </nav>
