--- a/app/pages/auth/login/login.html
+++ b/app/pages/auth/login/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,49 +11,31 @@
 <body>
     <div class="grid wide">
         <div class="login-container">
-            <h2  class = "content">LogIn</h2>
+            <h2 class="content">LogIn</h2>
             <button class="social-button facebook">
-                <img 
-                    src="https://cdn.icon-icons.com/icons2/642/PNG/512/facebook_icon-icons.com_59205.png" 
+                <img src="https://cdn.icon-icons.com/icons2/642/PNG/512/facebook_icon-icons.com_59205.png"
                     class="social-icon">
-               <span class="name-button">   Login with Facebook </span>    </button>
-            
+                <span class="name-button"> Login with Facebook </span> </button>
+
             <button class="social-button google">
-                <img 
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2008px-Google_%22G%22_Logo.svg.png" 
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2008px-Google_%22G%22_Logo.svg.png"
                     class="social-icon">Login with Google</button>
-            
+
             <button class="social-button apple">
-                <img 
-                    src="https://media.loveitopcdn.com/3807/logo-apple-1.png" 
-                    class="social-icon">Login with Apple</button>
+                <img src="https://media.loveitopcdn.com/3807/logo-apple-1.png" class="social-icon">Login with
+                Apple</button>
             <div class="separator">or</div>
             <form class="email-login-form">
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <div class="forgot-password"><a href="#">Forgot Password?</a></div>
                 <button type="submit" class="login-button">Login</button>
-
-    <div class="grid wide">
-
-        <div class="login-container">
-            <h2>Login</h2>
-            <button class="facebook"><img style="width: 20px;height: 20px;"
-                    src="https://hutechedu.web.app/assets/facebook-512.png"> Login with Facebook</button>
-            <button class="google"> <img style="width: 20px;height: 20px;"
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2008px-Google_%22G%22_Logo.svg.png">
-                Login with Google</button>
-            <button class="apple"> <img style="width: 20px;height: 20px;"
-                    src="https://media.loveitopcdn.com/3807/logo-apple-1.png"> Login with Apple</button>
-            <div class="separator" style="text-align: center;">or</div>
-            <form class="email-login">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <div class="forgot-password"><a href="#">Forgot Password?</a></div>
-                <button type="submit">Login</button>
             </form>
             <div class="signup">
                 Don't have an account? <a href="#">Sign up</a>
             </div>
         </div>
+    </div>
+</body>
 
+</html>
