add link site final

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -69,14 +69,14 @@
                     </h1>
                     <p>You want it. We get it. Food, drinks, groceries, and more available for delivery and pickup.</p>
                     <div class="location">
-                        <button>Explore </button>
+                        <button><a href="../restaurants/restaurants.html">Explore</a> </button>
                         <div class="location-input">
                             <input placeholder="Enter location..." type="text" />
                             <i class="fa-solid fa-location-dot"></i>
                         </div>
                     </div>
 
-                    <button>Order Now</button>
+                    <button><a href="../restaurants/restaurants.html">Order Now</a></button>
                 </div>
 
                 <div class="image">
