--- a/app/pages/auth/register/register.html
+++ b/app/pages/auth/register/register.html
@@ -30,9 +30,9 @@
             <input type="email" id="email" placeholder="Email">
 
             <input type="password" id="password" placeholder="Password">
-            <button type="submit">Sign Up</button>
+            <button type="submit"><a href="../../home/home.html">Sign Up</a></button>
             <div class="have-account">
-                Already have an account? <a href="#">Sign in</a>
+                Already have an account? <a href="../login/login.html">Sign in</a>
             </div>
         </form>
 
