--- a/app/pages/auth/login/login.html
+++ b/app/pages/auth/login/login.html
@@ -29,10 +29,10 @@
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <div class="forgot-password"><a href="#">Forgot Password?</a></div>
-                <button type="submit" class="login-button">Login</button>
+                <button type="submit" class="login-button"><a href="../../home/home.html">Login</a></button>
             </form>
             <div class="signup">
-                Don't have an account? <a href="#">Sign up</a>
+                Don't have an account? <a href="../register/register.html">Sign up</a>
             </div>
         </div>
     </div>
