--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -37,9 +37,9 @@
 
                 <div class="nav-author">
 
-                    <button class="btn-signin">Sign In</button>
+                    <button class="btn-signin"><a href="../auth/login/login.html">Sign In</a></button>
 
-                    <button class="button-primary">Sign Up</button>
+                    <button class="button-primary"><a href="../auth/register/register.html">Sign Up</a></button>
 
                     <i class="fa-solid fa-list active modal_menu"></i>
 
